# pyskel

./: CHANGELOG.md  CONTRIBUTORS.txt  ChangeLog.txt  MANIFEST.in  README.md  pyproject.toml  set_package_and_author.py  setup.cfg  setup.py
pyskel/: _version.py  utils.py
pyskel/conf/: configspec.conf
pyskel/scripts/: my_script.py  pyskel.py
